新增选择器

--- a/CSS/1.CSS和文档.md
+++ b/CSS/1.CSS和文档.md
@@ -161,3 +161,29 @@ not （color） and （orientation：landscape）
 （color） and not （min-device-width：800px）
 ```
 
+## 特性查询
+
+特性查询：通过判断用户代理是否支持特定的属性来组合应用样式块
+
+```css
+@supports (color:black){
+	body{
+		color: black
+	}
+}
+```
+
+特性查询也有逻辑关键字:
+
+1. and
+2. not
+3. or
+
+```css
+@supports (display: flex) and (shape-outside: circle()){...}
+/*等同于下面*/
+@supports (display: flex){
+	@supports (shape-outside: circle()){...}
+}
+```
+
