新增选择器

--- a/CSS/2.选择器.md
+++ b/CSS/2.选择器.md
@@ -70,3 +70,54 @@ a[href="www.baidu.com"]{...}
 a[href="www.baidu.com"][title="baidu"]{...}
 ```
 
+### 基于部分属性值来选择
+
+| 类型         | 描述                                                |
+| ------------ | --------------------------------------------------- |
+| [foo~="bar"] | 选择所有带有foo属性，且foo属性值包含单词bar的元素   |
+| [foo*="bar"] | 选择所有带有foo属性，且foo属性值中含有子串bar的元素 |
+| [foo^="bar"] | 选择所有带有foo属性，且foo属性值以bar开头的元素     |
+| [foo$="bar"] | 选择所有带有foo属性，且foo属性值以bar结尾的元素     |
+
+### 特定的属性选择器
+
+| 属性          | 描述                                                      |
+| ------------- | --------------------------------------------------------- |
+| [foo\|="bar"] | 选择所有带有foo属性，且foo属性值为bar或者以bar-开头的元素 |
+
+### 忽略大小写标识符
+
+在属性选择器结尾加上`i`可以忽略属性值大小写去匹配
+
+```css
+a[href$='.PDF' i]{...}
+```
+
+## 后代选择器
+
+```css
+/*选择p下面所有子元素em*/
+p em{...}
+```
+
+## 子元素选择器
+
+```css
+/*选择所有p的子元素em*/
+p > em{...}
+```
+
+## 相邻兄弟元素选择器
+
+```css
+/*选择紧跟在p后面的em元素*/
+p + em{...}
+```
+
+## 一般兄弟元素选择器
+
+```css
+/*选择在p后面（不需要紧跟）的所有em元素*/
+p ~ em{...}
+```
+
