--- a/CSS/2.选择器.md
+++ b/CSS/2.选择器.md
@@ -121,3 +121,121 @@ p + em{...}
 p ~ em{...}
 ```
 
+## 伪类
+
+伪类的效果是把某种幽灵类应用到伪类依附的元素上
+
+### 根元素
+
+`:root`伪类选择文档的根元素，在HTML中，根元素始终是html标签
+
+### 空元素
+
+`:empty`伪类可以选择没有任何子代的元素（文本节点都没有）
+
+```css
+<p></p> /*能被：empty伪类选中*/
+<p> </p> /*不能被：empty伪类选中*/
+```
+
+### 唯一子元素
+
+如果某个元素是另一个元素的唯一子元素，则该元素会被`:only-child`选中
+
+```css
+<a href="http://www.baidu.com">
+	<img src="w3.png"></img>
+</a>
+
+a[href] img:only-child{border:2px solid red}
+```
+
+如果某个元素是另一个元素的某个类型的唯一子元素，则该元素会被`:only-of-type`选中
+
+```css
+<a href="http://www.baidu.com">
+	<b>ccc</b>
+	<img src="w3.png"></img>
+</a>
+
+a img:only-of-type{
+	border:5px solid red;
+}
+```
+
+`:only-of-type`指代的是元素，不能是其他任何东西
+
+```css
+p.unique:only-of-type{
+	color:red;
+}
+<div>
+	<!--这两个p都不会被选中-->
+	<p class="unique">this is a p</p>
+	<p>this is another p</p>
+</div>
+```
+
+### 选择第一个或最后一个子代元素
+
+`:first-child`选择一个元素的第一个子元素
+
+```css
+<div>
+	<p>these are the necessary steps:</p><!--这个元素会被选中-->
+	<ul>
+		<li>Insert key</li><!--这个元素会被选中-->
+		<li>push accelerator</li>
+	</ul>
+	<p>Do noe push the brake at the same time as the accelerator</p>
+</div>
+p:first-child{font-weight: bold;}
+li:first-child{text-transform: uppercase}
+```
+
+`:last-child`选择一个元素的最后一个子元素
+
+```css
+<div>
+	<p>these are the necessary steps:</p>
+	<ul>
+		<li>Insert key</li>
+		<li>push accelerator</li><!--这个元素会被选中-->
+	</ul>
+	<p>Do noe push the brake at the same time as the accelerator</p><!--这个元素会被选中-->
+</div>
+p:first-child{font-weight: bold;}
+li:first-child{text-transform: uppercase}
+```
+
+### 选择第一个和最后一个某种元素
+
+`:first-of-type`选择一个元素的第一个某种元素
+
+```css
+table:first-of-type{border-top:2px solid gray}
+```
+
+`:last-of-type`选择一个元素的最后一个某种元素
+
+```css
+table:last-of-type{border-top:2px solid gray}
+```
+
+### 选择每第n个子元素
+
+`:nth-child(n)`可选中某个元素的第n个子元素
+
+```css
+p:nth-child(2){}/*选中某个元素的第二个子元素p*/
+p:nth-child(2n-1){}/*选中某个元素的第2n-1个子元素p*/
+```
+
+`:nth-child(even)`和`:nth-child(odd)`可选中某个元素的所有偶数和奇数子元素
+
+### 选择每第n个某种元素
+
+`nth-of-type()`
+
+`nth-last-of-type()`
+
