--- a/CSS/2.选择器.md
+++ b/CSS/2.选择器.md
@@ -121,7 +121,7 @@ p + em{...}
 p ~ em{...}
 ```
 
-## 伪类
+## 结构伪类
 
 伪类的效果是把某种幽灵类应用到伪类依附的元素上
 
@@ -204,8 +204,8 @@ li:first-child{text-transform: uppercase}
 	</ul>
 	<p>Do noe push the brake at the same time as the accelerator</p><!--这个元素会被选中-->
 </div>
-p:first-child{font-weight: bold;}
-li:first-child{text-transform: uppercase}
+p:last-child{font-weight: bold;}
+li:last-child{text-transform: uppercase}
 ```
 
 ### 选择第一个和最后一个某种元素
@@ -239,3 +239,103 @@ p:nth-child(2n-1){}/*选中某个元素的第2n-1个子元素p*/
 
 `nth-last-of-type()`
 
+## 动态伪类
+
+### 超链接伪类
+
+| 伪类     | 说明                                                |
+| -------- | --------------------------------------------------- |
+| :link    | 尚未访问的a标签状态                                 |
+| :visited | 已访问的a标签状态，通过这个伪类只能修改颜色相关属性 |
+
+### 用户操作伪类
+
+| 伪类    | 说明                       |
+| ------- | -------------------------- |
+| :focus  | 指代当前获得焦点的元素     |
+| :hover  | 指代鼠标指针放置其上的元素 |
+| :active | 指代由用户激活的元素       |
+
+> 动态伪类顺序：link-visited-focus-hover-active
+>
+> 使用动态伪类会导致后面的内容重排
+
+## UI状态伪类
+
+| 伪类           | 说明                                                         |
+| -------------- | ------------------------------------------------------------ |
+| :enabled       | 指代启用的用户界面元素，即接受输入的元素                     |
+| :disabled      | 指代禁用的用户界面元素，即不接受输入的元素                   |
+| :checked       | 指代由用户或文档默认选中的单选或复选框                       |
+| :indeterminate | 指代既未选中也没有未选中的单选或复选框，这个状态只能通过DOM来设定 |
+| :default       | 指代默认选中的单选按钮，复选按钮或选项                       |
+| :valid         | 表示用户输入的值满足全部数据验证条件                         |
+| :invalid       | 表示用户输入的值不满足全部验证条件                           |
+| :in-range      | 表示用户输入的值在min和max设置的值之间                       |
+| :out-of-range  | 表示用户输入的值不在min和max设置的值之间                     |
+| :required      | 指代必须输入值的输入框                                       |
+| :optional      | 指代无需一定输入值的输入框                                   |
+| :read-write    | 指代可由用户编辑的输入框                                     |
+| :read-only     | 指代只读的输入框                                             |
+
+```css
+<input id="nickels" type="number" min="0" max="1000">
+input[type="number"]:focus:out-of-range{
+    background-image:url(warning.png)
+}
+input[type="number"]:focus:in-range{
+    background-image:url(checkmark.jpg)
+}
+```
+
+## `:target`伪类
+
+URL中有片段标识符，并且文档中有对应片段标识符的id的元素，那么这个元素就是片段标识符的目标。`:target`可以突出显示目标元素
+
+```css
+/*
+	假设此时url为www.baidu.com/#zzz
+	zzz就是片段标识符
+	div就是片段标识符的目标
+*/
+:target{
+	background-color:black;
+}
+<div id="zzz"></div>
+```
+
+## `:lang`伪类
+
+`:lang()`伪类可以根据文本使用的语言来选择元素
+
+```css
+*:lang(fr){...}
+```
+
+## 否定伪类
+
+否定选择符`:not()`，选择不满足条件的元素，括号中是简单选择符，不能是组合选择符
+
+## 伪元素选择符
+
+`::first-letter`用于装饰任何**<u>非行内元素</u>**的的首字母
+
+`::first-line`用于装饰<u>**非行内元素**</u>的首行文本
+
+**伪元素可用的属性限制**
+
+| ::first-letter   | ::first-line     |
+| ---------------- | ---------------- |
+| 所有字体属性     | 所有字体属性     |
+| 所有背景属性     | 所有背景属性     |
+| 所有文本装饰属性 | 所有文本装饰属性 |
+| 所有行内排版属性 | 所有行内排版属性 |
+| 所有行内布局属性 | 所有外边距属性   |
+| 所有边框属性     | 所有边框属性     |
+| box-shadow       | 所有内边距属性   |
+| color            | color            |
+| opacity          | opacity          |
+
+`::before`：在元素开头插入内容
+
+`::after`：在元素结束插入内容
