新增文本属性

--- a/CSS/6.文本属性.md
+++ b/CSS/6.文本属性.md
@@ -1,2 +1,36 @@
 # 文本属性
 
+## 缩进和文本对齐
+
+### 文本缩进
+
+`text-indent`把元素的第一行文本缩进指定的长度，长度可以是负值
+
+> 适用于块级元素
+>
+> 会继承
+
+### 文本对齐
+
+`text-align`控制元素中各行文本的对齐方式
+
+| 属性    | 描述               |
+| ------- | ------------------ |
+| left    | 与起始边对齐       |
+| right   | 与终边对齐         |
+| center  | 居中对齐           |
+| start   | 与起始边对齐       |
+| end     | 与终边对齐         |
+| justify | 与父元素的两端对齐 |
+
+## 块级对齐
+
+### 行高
+
+`line-height`属性指行的基线之间的距离，控制的是行距
+
+> 行距 = 行高 - 字体高度
+>
+> 适用于所有元素
+>
+> 会继承
