新增文本属性

--- a/CSS/6.文本属性.md
+++ b/CSS/6.文本属性.md
@@ -34,3 +34,111 @@
 > 适用于所有元素
 >
 > 会继承
+
+`line-height`的继承规则因父元素的取值而异
+
+| 父元素取值 | 描述                         | 子元素继承规则             |
+| ---------- | ---------------------------- | -------------------------- |
+| normal     | 浏览器默认根据字体*1.2       | 根据自身字体大小*1.2       |
+| length     | 设置固定行高20px             | 继承父元素行高数值（20px） |
+| %          | 基于当前字体大小计算（130%） | 继承父元素计算后的具体数值 |
+| number     | 根据自身字体大小*number      | 自身字体大小*number        |
+
+### `vertical-align`
+
+取值：baseline，sub，super，top，text-top，middle，bottom，text-bottom，长度（把元素的基线抬升或下沉的距离）和百分比（把元素的基线相对于父元素的基线抬升或下沉的量，量根据自身的`line-height`值计算）
+
+> 适用于行内元素和置换元素
+>
+> 不能继承
+
+## 单词间距和字符间距	
+
+### 单词间距
+
+`word-spacing`属性指定的长度值可以修改单词之间的距离
+
+> 适用于所有元素
+>
+> 能继承
+
+### 字符间距
+
+`letter-spacing`属性指定的长度值可以修改字符或字母之间的距离
+
+> 适用于所有元素
+>
+> 能继承
+
+## 文本转换	
+
+`text-transform`转变文本大小写
+
+取值uppercase，lowercase，capitalize（各单词首字母变大写）
+
+> 适用于所有元素
+>
+> 能继承
+
+## 文本装饰
+
+`text-decoration`用来装饰文本，颜色根据元素的文字颜色来决定
+
+取值underline(下划线)，overline（上划线），line-through（中划线）
+
+> 适用于所有元素
+>
+> 不能继承
+
+## 文本阴影
+
+`text-shadow: x y 模糊半径 阴影颜色`
+
+> 适用于全部元素
+>
+> 不能继承
+
+## 处理空白
+
+`white-space`影响浏览器对文旦源码中空格，换行符和制表符的处理方式
+
+| 属性值   | 描述                             |
+| -------- | -------------------------------- |
+| normal   | 换行符变空白，多个空格便一个空格 |
+| pre      | 不去压缩空白，不会自动换行       |
+| nowrap   | 不换行，除非遇到br               |
+| pre-wrap | 不去压缩空白，会自动换行         |
+| pre-line | 压缩空白，会自动换行             |
+
+## 换行
+
+`word-break`指示用什么样的方式对文本进行换行
+
+| 属性值    | 描述                                 |
+| --------- | ------------------------------------ |
+| normal    | 按正常方式换行，只在单词之间换行     |
+| break-all | 在内容触及边界时换行，可在单词内换行 |
+| keep-all  | cjk文本不断行，non-cjk和normal一样   |
+
+> 适用于所有元素
+>
+> 有继承性
+
+`overflow-wrap(原word-wrap)`指定是否允许在单词内换行
+
+normal指按照正常方式换行，即只能在单词之间换行
+
+break-word指在单词内可以进行换行
+
+## 书写模式
+
+### 声明方向
+
+`direction`属性影响文本的书写方向，取值ltr和rtl
+
+> 适用于所有元素
+>
+> 能继承
+
+
+
