新增边框轮廓

--- a/CSS/7.视觉格式化基础.md
+++ b/CSS/7.视觉格式化基础.md
@@ -21,3 +21,21 @@
 | 三个属性都设置为auto     | 两侧外边距为0，宽度占全部位置 |
 
 > 七个横向属性之和等于父元素的width
+>
+> 子元素的外边距若为负数，则子元素的宽度会变大
+
+### 纵向格式化属性
+
+纵向格式化属性有七个：`margin-top`,`border-top`,`padding-top`,`height`,`padding-bottom`,`border-bottom`和`margin-bottom`
+
+这七个属性中，只有`margin-top`,`margin-bottom`和`height`可以设置auto
+
+`margin-top`和`margin-bottom`必须为具体的值，否则取默认值0，`margin-top`和`margin-bottom`同时为auto，结果是都为0
+
+> `height:auto`框体的高度恰好能放得下里面的内容
+>
+> 上下外边距为负值，元素后面的元素也会跟着移动
+
+### 列表
+
+列表的小圆点可以通过`list-style-position`来控制放在列表内容区内还是内容区外
