--- a/CSS/9.颜色，背景和渐变.md
+++ b/CSS/9.颜色，背景和渐变.md
@@ -1,4 +1,4 @@
-# 
+# 背景，颜色和渐变
 
 ## 颜色
 
@@ -9,6 +9,8 @@
 前景色对边框来说，如果没有设置`border-style`属性，则边框颜色使用前景色
 
 ## 背景
+
+所有属性适用于所有元素
 
 ### 背景色
 
@@ -74,3 +76,93 @@ p{
 background-repeat: repeat-x; /*相当于no-repeat repeat-x*/
 ```
 
+### 背景粘附
+
+`background-attachment`指定背景的粘附方式
+
+取值：fixed | scroll | local
+
+### 背景尺寸
+
+`background-size`指定背景尺寸，有两个值，分别为x轴和y轴
+
+取值：length | 百分数 | contain | cover
+
+```css
+background-size: cover; // 整个元素完全被图像覆盖（即短边100%）
+background-size: contain; // 图像完全显示在元素中（即长边100%）
+background-size: 400px 4em;
+```
+
+### 背景简写
+
+`background`为属性简写，规则如下：
+
+1. `background-size`必须紧跟在`background-position`之后
+2. 横向轴值在前，纵向轴值在后
+3. 同时为`background-origin`和`background-clip`提供值，前一个值分配给`background-origin`后一个值分配给`background-clip`
+
+### 多个背景值
+
+一个元素可以指定多个背景，每个背景之间用逗号分隔，唯一的限制是`background-color`不能指定多个，若指定多个，只应用最后一个值
+
+```css
+background: url(bg01.png) right top no-repeat,
+			url(bg02.png) center left no-repeat;
+```
+
+## 渐变
+
+渐变指从一个颜色到另一个颜色的平滑过渡
+
+> **渐变是图像，能用到任何可以使用图像的地方**
+
+### 线性渐变
+
+`linear-gradient(angle, 颜色 定位色标, 中色点)`
+
+```css
+background-image: linear-gradient(purple,gold); // 默认方向是从上到下
+background-image: linear-gradient(135deg, purple, gold, navy);
+background-image: linear-gradient(90deg, red, orange 25px, yellow 50px, green 75px, blue 100px, indigo 125px, violet 150px); // 各颜色相距25px
+background-image: linear-gradient(90deg, red, orange,yellow,green 50%,blue 50%,indigo,violet); // 急性渐变
+background-image: linear-gradient(to right, #000 25%, 67%, rgb(90%,90%,90%) 75%) // 将原本在50%处的中色点设置在67%处
+```
+
+### 径向渐变
+
+#### 形状和尺寸
+
+径向渐变只有两种可用的形状值（circle和ellipse），形状可以不指定从而通过尺寸推导出来
+
+```css
+radial-gradient(50px, purple, gold) // x轴和y轴的渐变尺寸都是50px，所以形状是circle
+radial-gradient(50px 100px, purple, gold) // x轴尺寸50px，y轴尺寸100px，所以形状是ellipse
+```
+
+#### 定位径向渐变
+
+设置径向渐变的渐变中心
+
+```css
+radial-gradient(30px at bottom left, purple, gold)
+radial-gradient(30px 15px at center right, purple, gold)
+```
+
+#### 径向渐变的色标和梯度射线
+
+```css
+radial-gradient(80px, purple -40px, green 20px, gold 80px)
+```
+
+### 循环渐变
+
+`repeating-linear-gradient`和`repeating-radial-gradient`
+
+```css
+background: repeating-linear-gradient(-45deg, black 0,black 25px yellow 50px) top left;
+```
+
+## 盒子投影
+
+`box-shadow: inset x轴偏移量 y轴偏移量 阴影模糊半径 阴影扩散半径 阴影颜色`
