--- a/CSS/10.浮动.md
+++ b/CSS/10.浮动.md
@@ -97,7 +97,10 @@ polygon(evenodd,25px 0, 50px 25px,25px 50px, 0 25px)
 
 **这个属性用于指定透明度为多少时允许内容流入**
 
-```
+```css
 shape-image-threshold: 0.5; //当图像中透明度超过50%的部分将允许内容流入
 ```
 
+### 为形状添加外边距
+
+`shape-margin`适用于浮动元素，不能继承
