--- a/CSS/11.定位.md
+++ b/CSS/11.定位.md
@@ -67,3 +67,28 @@
 
 除bottom之外的某个偏移属性为auto，将使用静态位置（即position属性值为static时的位置）
 
+### `z-index`
+
+`z-index`适用于定位元素，没有继承性
+
+## 固定定位
+
+固定定位的容纳块是视区，完全脱离文档流
+
+## 相对定位
+
+相对定位只是把元素从常规位置移开了，但是占据的空间没有消失
+
+如果相对定位出现过约束，把其中一个值设为另一个值的相反数
+
+```css
+strong{
+	position: relative;
+	top: 10px;
+	bottom: 20px; // 会把bottom修改为-10px;
+}
+```
+
+## 粘滞定位
+
+`position: sticky`在接触到定位边界之前，元素处于文档流之中，接触到定位边界之后，元素脱离文档流
