--- a/CSS/12.弹性盒布局.md
+++ b/CSS/12.弹性盒布局.md
@@ -121,3 +121,45 @@ flex-flow: row nowrap; //默认值
 
 缩小比例=缺少的空间/((宽度1*缩减因子1)+...+(宽度n*缩减因子n))
 
+### `flex-basis`属性
+
+弹性基准定义弹性元素的初始或默认尺寸，即根据增长因子和缩减因子分配多余或缺少空间之前，弹性元素的大小
+
+`flex-basis: auto`即弹性基准为元素在主轴方向上的尺寸，如果设置了width或height，则弹性基准就等于那个长度，如果width或height也是auto，则弹性基准回落到content
+
+```css
+flex-basis: content
+等价于
+flex-basis: auto;
+width: auto;
+或者
+flex-basis: autop;
+height: auto;
+```
+
+如果设置了`flex-basis: auto`且没有其他属性声明宽度或高度，则弹性元素的尺寸刚好能放下内容
+
+如果既设定了width或height又设定了长度值的`flex-basis`，则`flex-basis`的值优先级比width或height高，但是不会覆盖`max-width`,`max-height`,`min-width`和`min-height`
+
+![](C:\Users\Administrator\Desktop\Note\imgs\flex-basis.png)
+
+`flex-basis`取值为百分数的时候是按照主轴尺寸计算的，如果放不下，则会自动缩减
+
+如果声明了flex属性但没有设定弹性基准，则弹性基准为0，弹性基准为0时，则将主轴所有空间按照增长因子比例分配给各个弹性元素
+
+## `flex`简写属性
+
+常见弹性值：
+
+1. `flex:initial`：根据width或height计算弹性元素的尺寸，允许缩小
+2. `flex:auto`：根据width或height计算弹性元素的尺寸，允许缩小和放大
+3. `flex:none`：根据width或height计算弹性元素的尺寸，不允许缩小和放大
+4. `flex:<number>`：将增长因子设置为number指定的值，缩减因子和弹性基准设为0。即width或height的值相当于最小尺寸，弹性元素在有多余空间时将增大
+
+## order属性
+
+order用于修改单个弹性元素的显示顺序，**适用于弹性元素以及弹性容器中的绝对定位子元素**
+
+默认值为0，order值为负数的排在0的前面，正数排在0的后面
+
+**只是修改视觉顺序，源码顺序没变，所以tab键的索引顺序还是按照源码顺序排列**
