--- a/CSS/17.过渡.md
+++ b/CSS/17.过渡.md
@@ -1,5 +1,7 @@
 # 过渡
 
+**过渡都没有继承性**
+
 ## 定义过渡的属性
 
 过渡使用四个属性定义：`transition-property`、`transition-duration`、`transition-timing-funciton`和`transition-delay`，可用`transition`简写属性一次性声明四个属性
@@ -13,3 +15,61 @@
 ### 设置过渡持续时间
 
 `transition-duration`指定从一个状态过渡到另一个状态需要的时间。值是以逗号分隔的时间长度列表，单位是s或者ms。适用于所有元素以及before，after伪元素
+
+如果`transition-delay`不是正值，且没有声明`transition-duration`，则`transition-property`没有效果，即不处罚`transitionend`事件
+
+`transition-duration`不能是负值，否则过渡会失效
+
+`transition-duration`可以统一声明，也可以单独为各个属性声明，还可以让余下的属性使用相同持续时间
+
+### 调整过渡的内部时序
+
+`transition-timing-function`用于控制过渡的步调，适用于所有元素以及before和after伪元素
+
+**支持三次方贝塞尔函数关键字**
+
+| 时序函数       | 描述                                       | 贝塞尔值                      |
+| -------------- | ------------------------------------------ | ----------------------------- |
+| cubic-bezier() | 指定一个三次方贝塞尔曲线                   | cubic-bezier(x1,y1,x2,y2)     |
+| ease           | 慢速开始，然后加速，再慢下来，结束时特别慢 | cubic-bezier(0.25,0.1,0.25,1) |
+| linear         | 整个过程保持匀速                           | cubic-bezier(0,0,1,1)         |
+| ease-in        | 慢速开始，然后加速                         | cubic-bezier(0.42,0,1,1)      |
+| ease-out       | 快速开始，然后减速                         | cubic-bezier(0,0,0,58,1)      |
+| ease-in-out    | 与ease类似，中间快，两端慢                 | cubic-bezier(0.42,0,0.58,1)   |
+
+**步进时序**
+
+| 时序函数       | 描述                                                   |
+| -------------- | ------------------------------------------------------ |
+| step-start     | 整个过渡都处在最终关键帧上，等同于steps(1,start)       |
+| step-end       | 整个过渡都处在初始关键帧上，等同于steps(1,end)         |
+| steps(n,start) | 显示n个固定镜头，其中第一个固定镜头占整个过渡的百分之n |
+| steps(n,end)   | 显示n个固定镜头，前百分之n的时间处于初始化状态         |
+
+![](C:\Users\Administrator\Desktop\Note\imgs\steps.png)
+
+`transition-timing-function`可以统一声明，也可以单独为各个属性声明
+
+### 延迟过渡
+
+`transition-delay`在开始过渡之前引入一定的延迟。适用于所有元素以及before和after伪元素
+
+`transition-delay`可以统一声明，可以单独为各个属性声明，也可以让余下的属性使用相同的延迟时间
+
+`transition-delay`值为负数，且绝对值比`transition-duration`小，则值转化为相反数，如果值为负数且绝对值比持续时间大，则不触发过渡，`transitionend`也不触发
+
+### `transition`简写属性
+
+`transition: transition-property transition-duration transition-timing-function transition-delay`适用于所有元素以及before和after伪元素
+
+transition属性值可以是none，也可以时任意个以逗号分隔的单次过渡
+
+## 反向过渡
+
+如果只声明一个`transition`属性，应该放在起始状态中，因为希望设置的过渡在变成任何状态时都生效。如果想进一步控制，为不同的行进方向设置不同的过渡效果，要在设计的所有类和UI状态中声明`transition`属性
+
+## 支持动画的属性和值
+
+[支持动画的属性](https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_animated_properties)
+
+**<u>如果能找到属性的两个值的中间点，即能内插，那么属性的值就支持动画</u>**
