新增JS基础部分

--- a/JavaScript/1.Script.md
+++ b/JavaScript/1.Script.md
@@ -4,7 +4,7 @@
 
 1. async：立即下载脚本，下载完成后立即执行，不会阻塞页面执行，只能用于外部脚本，不同的异步脚本执行顺序不一致，所以不能在异步脚本中修改DOM
 2. crossorigin：设置CORS跨域，anonymous表示不设置跨域请求头，use-credentials表示设置请求头
-3. defer：立即下载小本，等到文档解析完成后执行，所有defer脚本都在DOMContentLoaded之前执行
+3. defer：立即下载脚本，等到文档解析完成后执行，所有defer脚本都在DOMContentLoaded之前执行
 4. integrity：比对接收到的资源和指定的加密签名以验证资源的完整性，不一致则报错脚本不执行，可用于确保CDN不会提供恶意资源
 5. src：指定外部资源脚本
 6. type：指定脚本的MIME类型，通常是“text/javascript”，javascript的MIME类型是“application/x-javascript”。如果值为module，则被当成ES6模块，这时才能用import和export关键字
