修改js语言基础

--- a/CSS/12.弹性盒布局.md
+++ b/CSS/12.弹性盒布局.md
@@ -94,6 +94,8 @@ flex-flow: row nowrap; //默认值
 
 ![](C:\Users\Administrator\Desktop\Note\imgs\align-content.png)
 
+![](/Users/avalon/Documents/Note/imgs/align-content.png)
+
 ## 弹性元素
 
 ### 弹性元素的特性
@@ -142,6 +144,8 @@ height: auto;
 如果既设定了width或height又设定了长度值的`flex-basis`，则`flex-basis`的值优先级比width或height高，但是不会覆盖`max-width`,`max-height`,`min-width`和`min-height`
 
 ![](C:\Users\Administrator\Desktop\Note\imgs\flex-basis.png)
+
+![](/Users/avalon/Documents/Note/imgs/flex-basis.png)
 
 `flex-basis`取值为百分数的时候是按照主轴尺寸计算的，如果放不下，则会自动缩减
 
