新增作用域和上下文

--- a/JavaScript/2.语言基础.md
+++ b/JavaScript/2.语言基础.md
@@ -163,3 +163,201 @@ console.log('\u00A9') // ©️
 console.log(String.raw`\u00A9`) // \u00A9
 ```
 
+### Symbol类型
+
+symbol实例时唯一不可变的，一般用作唯一标识符，不会发生冲突
+
+#### symbol的基本用法
+
+`Symbol()`函数初始化symbol类型实例，可以传入一个描述symbol实例的参数
+
+```js
+let sym = Symbol('foo')
+let otherSym = Symbol('foo')
+sym === otherSym // false
+```
+
+创建symbol实例不能用new关键字，这样是为了避免创建symbol的包装对象，如果想创建symbol包装对象，可借用Object函数
+
+```js
+let sym = Symbol('foo')
+let myWrappedSymbol = Object(sym)
+```
+
+#### 全局Symbol注册表
+
+用`Symbol.for()`方法创建的符号是在全局Symbol注册表中创建并重用实例
+
+**第一次使用某个字符串调用时，他会检测全局运行时注册表，发现不存在对应Symbol实例，则创建新的Symbol实例到注册表中。若发现存在与该字符串对应的Symbol实例，则返回该实例而不创建**
+
+```js
+let fooGlobalSymbol = Symbol.for('foo')
+let otherGlobalSymbol = Symbol.for('foo') // 这里会重用全局Symbol符号，不会去创建
+fooGlobalSymbol === otherGlobalSymbol // true
+```
+
+即使采用相同的Symbol描述，全局注册表中的Symbol实例和`Symbol()`定义的也不相同
+
+```js
+let localSymbol = Symbol('foo')
+let globalSymbol = Symbol.for('foo')
+localSymbol === globalSymbol // false
+```
+
+`Symbol.keyFor()`可以查询全局注册表，这个方法接受Symbol实例，返回全局Symbol实例对应的字符串键，如果没有对应的全局Symbol，则返回undefined
+
+```js
+let s = Symbol.for('foo')
+console.log(Symbol.keyFor(s)) // foo
+let s1 = Symbol('bar')
+console.log(Symbol.keyFor(s1)) // undefined
+```
+
+#### 使用Symbol作为属性
+
+凡是可以使用字符串和数字作为属性的地方，都可用Symbol作为属性，包括`defineProperty()`和`defineProperties()`。**对象字面量只能在计算属性语法中使用Symbol作为属性**
+
+```js
+let s1 = Symbol('foo'),
+	s2 = Symbol('bar')
+let o = {
+	[s1]: 'foo val'
+}
+Object.defineProperty(0,s2,{value: 'bar val'})
+```
+
+- `Object.getOwnPropertyNames()`返回对象的常规属性的键的数据
+- `Object.getOwnPropertySymbols()`返回对象的`Symbol`属性的键的数组
+- `Object.getOwnPropertyDescriptors()`返回同时包含常规属性和`Symbol`实例属性的描述符对象
+- `Reflect.ownKeys()`返回两种类型的属性键
+
+#### 常用内置符号
+
+内置符号都是以Symbol工厂函数字符串属性的形式存在，可以通过自定义对象的内置符号来改变默认行为。如改变自定义对象的`Symbol.iterator`的值，就能改变`for-of`的行为
+
+```js
+class Foo{
+	*[Symbol.iterator](){}
+}
+
+let f = new Foo()
+console.log(f[Symbol.iterator]()) // Generator{<suspended>}
+```
+
+### Object类型
+
+Object 类型的公共方法:
+
+- `Constructor`:保存用户创建当前对象的函数
+- `hasOwnProperty("propertyName")`:检查给定属性是否在调用对象的实例上,不包括原型,属性名必须是字符串形式
+- `isPrototypeOf(object)`:检查传入的对象是否是调用对象的原型
+- `propertyIsEnumerable("propertyName")`:用于检查给定属性是否能够用 for-in 来枚举
+- `toLocaleString()`:返回对象的字符串表示,字符串与执行环境的地区对应
+- `toString()`:返回对象的字符串表示
+- `valueOf()`:返回对象的字符串、数值或布尔值表示
+
+## 操作符
+
+### 一元操作符
+
+#### ++--
+
+前置++--先运算后赋值,后置++--先赋值后运算,都是先调用 Number()再进行+-1
+
+#### 一元+-
+
+调用 Number()后,+就是其本身,-取其相反数
+
+### 位运算符
+
+#### 按位非(~)
+
+结果是数值的反码,结论是数值的负数-1
+
+#### 按位与(&)
+
+二进制对应位都为 1 才为 1
+
+#### 按位或(|)
+
+二进制对应位都为 0 才为 0
+
+#### 按位异或(^)
+
+二进制对应位都为 0 或 1 才为 0,对应位只有 1 个 1 结果为 1
+
+### 布尔操作符
+
+#### 逻辑非(!)
+
+先将操作数转为布尔值,再取反
+
+#### 逻辑与(&&)
+
+先将两边的操作数转为布尔值,遇到 false 则返回该操作数
+
+#### 逻辑或(||)
+
+先将两边的操作数转为布尔值,遇到 true 则返回该操作数
+
+### 乘性操作符
+
+*/%如果有操作数不是数值则调用 Number(),有操作数是 `NaN`,则结果为 `NaN`
+
+### 加性操作符
+
++-有操作数不是数值则调用 Number(),有操作数是 `NaN`,则结果为 `NaN`
++一边是字符串,则将另一边调用 `toString()`进行拼接操作
+
+### 关系操作符
+
+操作数都是字符串,比较编码值
+如果有一个操作数不是数值,则调用 Number()再比较
+
+### 相等运算符
+
+#### ==
+
+有一个操作符不是数值则调用 Number()再比较
+undefined == null
+比较对象则是比较是否是同一个对象
+有一个操作数是 `NaN`,则结果为 false
+
+#### ===
+
+严格相等比较
+
+### 语句
+
+#### for-in 语句
+
+```js
+for (var 属性名 in 对象) {
+  循环体;
+}
+```
+
+for-in循环只能循环对象中的非`Symbol`属性
+
+因为对象属性没有顺序,所以 for-in 循环输出的属性名的顺序也是不可测的。
+for-in 循环 null 或 undefined,则会报错
+
+#### for-of 语句
+
+```js
+for(let 属性名 of 可迭代对象){
+	循环体;
+}
+```
+
+`for-of`循环会按照可迭代对象的`next()`方法产生值的顺序迭代元素
+
+#### label 语句
+
+```js
+start: for (var i = 0; i < count; i++) {
+  alert(i);
+}
+```
+
+label 语句是配合 break 或 continue 使用的
