--- a/JavaScript/5.集合引用类型.md
+++ b/JavaScript/5.集合引用类型.md
@@ -330,9 +330,9 @@ console.log(concatArray instanceof Int32Array) // true
 
 #### 下溢和上溢
 
-定型数组中值的下溢和上溢不会印象到其他索引
+定型数组中值的下溢和上溢不会影响到其他索引
 
-```
+```js
 const ints = new Int8Array(2)
 const unsignedInts = new Uint8Array(2)
 
@@ -340,5 +340,166 @@ unsignedInts[1] = 256
 console.log(unsignedInts[1]) // [0,0]  只会取最低有效位上的8位
 unsignedInts[1] = 511
 console.log(unsignedInts[1]) // [0,255]
+```
+
+## Map
+
+### 基本`API`
+
+`new Map(可迭代对象)`创建实例
+
+```js
+const m1 = new Map([
+	['key1','value1'],
+	['key2','value2'],
+	['key3','value3']
+])
+```
+
+`set()`给实例添加键值对，返回的还是`Map`实例
+
+`get()`通过键获取值
+
+`size`属性获取实例的键值对长度
+
+`has()`查询实例上是否这参数属性
+
+`delete()`根据参数属性删除键值对
+
+`clear()`清空实例上所有键值对
+
+```js
+let map = new Map()
+map.set('zzz','ll').set('ll','zzz')
+map.has('zzz') // true
+map.get('zzz') // ll
+map.delete('zzz')
+map.clear()
+```
+
+`Map`的键名可以是任意数据类型，采用`SameValueZero`比较方法
+
+### 顺序和迭代
+
+`Map`实例会维护键值对的插入顺序，`Map`实例可通过`entries()`或这`Symbol.iterator`属性获取Iterator迭代器
+
+`entries()`是默认迭代器，所以可通过扩展操作符来将`Map`转换为数组
+
+`Map`可调用`forEach`方法，作用和数组的`forEach`一样
+
+```js
+const m = new Map([
+	['key1','val1']
+])
+
+for(let pair of m.entries()){}
+for(let pair of m[Symbol.iterator]()){}
+console.log(...m) // [[key1,val1]]
+m.forEach(item=>console.log(item),{a:1})
+```
+
+`keys()`返回键的迭代器
+
+`values()`返回值的迭代器
+
+### `Object`还是`Map`
+
+- 内存占用`Map`比`Object`少近50%
+- 插入性能`Map`比`Object`稍快
+- 查找速度大致相当，除了`Object`被当作数组使用时会快点
+- 删除性能`Map`比`Object`快的多
+
+## `WeakMap`
+
+### 基本`API`
+
+`new WeakMap()`创建实例，键只能是`Object`或者继承自`Object`的类型
+
+```js
+const key1 = {id: 1},
+	key2 = {id: 2},
+	key3 = {id: 3};
+const wm1 = new WeakMap([
+	[key1, 'val1'],
+	[key2, 'val2'],
+	[key3, 'val3']
+])
+
+const wm2 = new WeakMap([
+	[key1, 'val1'],
+	['sss','val2'] // 创建失败，键不能是Object以外的类型
+])
+```
+
+`set()`向实例添加键值对，返回的还是`WeakMap`的实例
+
+`get()`通过键名获取值
+
+`has()`通过键名判断实例中是否有该键值对
+
+`delete()`通过键名删除实例中的该键值对
+
+### 弱键
+
+'weak'表示弱映射的键是弱弱的拿着，这些键不是真正的引用，不会阻止垃圾回收
+
+```js
+const wm = new WeakMap();
+wm.set({},'val') // 这个键值对的键的没有其他的引用，所以这行代码结束这个键就被回收了，键值对也就不存在
+
+const wm = new WeakMap();
+const container = {
+	key: {}
+}
+wx.set(container.key,'val') // 只有调用了removeReference这个键值对的键才会被垃圾回收
+function removeReference(){
+	container.key = null
+}
+```
+
+**`WeakMap`类型不能迭代**
+
+### 使用弱映射
+
+#### 私有变量
+
+**私有变量等看完面向对象再看**
+
+### DOM节点元素据
+
+```js
+const m = new Map()
+const loginButton = document.querySelector('#login')
+m.set(loginButton,{disabled: true}) // 因为使用的是Map，所以即使当登录按钮从DOM中删掉了，但是映射中还保留着按钮的引用，所以DOM节点还是保存在内存中不会被回收
+
+const wm = new WeakMap()
+const loginButton = document.querySelector('#login')
+wm.set(loginButton,{disabled: true}) // 当节点从DOM中删除，垃圾回收程序就立即回收登录按钮的内存
+```
+
+## Set
+
+`new Set(可迭代对象)`创建集合
+
+```js
+const s1 = new Set(['val1','val2','val3'])
+alert(s1.size)
+```
+
+`add()`向集合实例添加值，返回的还是集合实例
+
+`has()`通过值查询集合是否有该值
+
+`delete()`删除值
+
+`clear()`清空集合
+
+```js
+let s = new Set()
+s.add('z')
+ .add(1)
+s.has(1) // true
+s.delete(1) // true
+s.clear()
 ```
 
