修改WeakSet，新增对象属性，解构

--- a/JavaScript/5.集合引用类型.md
+++ b/JavaScript/5.集合引用类型.md
@@ -73,24 +73,6 @@ const aEntries = Array.from(a.entries()) // [[0,'foo'],[1,'bar'],[2,'baz'],[3,'q
 
 `join(拼接参数)`将数组用参数分隔拼接成一个字符串
 
-### 栈方法
-
-`push()`接受任意数量参数添加到末尾，返回数组长度
-
-`pop()`删除数组最后一项，返回被删除的项
-
-### 队列方法
-
-`unshift()`接受任意数量参数添加到开头，返回数组长度
-
-`shift()`删除数组第一项，返回被删除的项
-
-### 排序方法
-
-`reverse()`将数组反转
-
-`sort()`将数组每项调用`String()`进行排序，可接受一个比较函数
-
 ### 操作方法
 
 `concat()`接受任意个参数，将其添加到源数组副本的后面，参数如果是数组，会自动打平，可以设置`Symbol.isConcatSpreadable`为false来禁止强制打平数组
@@ -115,6 +97,24 @@ console.log(colors3) // ['red','green','blue',['pink','cyan']]
 
 `splice(开始索引，删除长度n，添加的值)`将原数组从开始索引位置开始删除，删除n个项，然后将后面的值插入给数组
 
+### 栈方法
+
+`push()`接受任意数量参数添加到末尾，返回数组长度
+
+`pop()`删除数组最后一项，返回被删除的项
+
+### 队列方法
+
+`unshift()`接受任意数量参数添加到开头，返回数组长度
+
+`shift()`删除数组第一项，返回被删除的项
+
+### 排序方法
+
+`reverse()`将数组反转
+
+`sort()`将数组每项调用`String()`进行排序，可接受一个比较函数
+
 ### 搜索和位置方法
 
 #### 严格相等
@@ -131,6 +131,12 @@ console.log(colors3) // ['red','green','blue',['pink','cyan']]
 
 `findIndex(断言函数)`数组每项调用断言函数，如果断言函数返回真值则表示匹配，返回匹配的项的索引
 
+### 归并方法
+
+`reduce(归并函数，归并初始值)`从左往右迭代数组每一项，将上一次的结果作为下一次调用的初始值
+
+`reduceRight(归并函数，归并初始值)`从右往左迭代数组每一项，将上一次的结果作为下一次调用的初始值
+
 ### 迭代方法
 
 每个迭代方法接受两个参数：以每一项为参数运行的函数和函数this对象
@@ -145,12 +151,6 @@ console.log(colors3) // ['red','green','blue',['pink','cyan']]
 
 `forEach()`对数组每一项都运行函数，没有返回值
 
-### 归并方法
-
-`reduce(归并函数，归并初始值)`从左往右迭代数组每一项，将上一次的结果作为下一次调用的初始值
-
-`reduceRight(归并函数，归并初始值)`从右往左迭代数组每一项，将上一次的结果作为下一次调用的初始值
-
 ## 定型数组
 
 ### `ArrayBuffer`
@@ -159,14 +159,14 @@ console.log(colors3) // ['red','green','blue',['pink','cyan']]
 
 `ArrayBuffer`是所有定型数组及视图引用的基本单位
 
-`ArrayBuffer()`是一个构造函数，用于在内存中分配特定数量的字节空间
+**`ArrayBuffer()`是一个构造函数，用于在内存中分配特定数量的字节空间**
 
 ```js
 const buf = new ArrayBuffer(16)
 alert(buf.byteLength) // 16
 ```
 
-`ArrayBuffer`一旦创建就不能再调整大小，可以通过`slice()`复制全部或者一部分到一个新实例中
+**`ArrayBuffer`一旦创建就不能再调整大小**，可以通过`slice()`复制全部或者一部分到一个新实例中
 
 ```js
 const buf1 = new ArrayBuffer(16)
@@ -180,7 +180,7 @@ alert(buf.byteLength)
 
 这个视图专为文件I/O和网络I/O设计，其`API`支持对缓冲数据的高度控制，但性能比其他视图略差。`DateView`对缓冲内容没有任何预设，也不能迭代
 
-必须在对已有`ArrayBuffer`读取或写入时才能创建`DataView`实例
+**必须在对已有`ArrayBuffer`读取或写入时才能创建`DataView`实例**
 
 ```js
 let buf = new ArrayBuffer(16)
@@ -457,7 +457,7 @@ function removeReference(){
 }
 ```
 
-**`WeakMap`类型不能迭代**
+**`WeakMap`类型不能迭代**，所以没有`clear()`
 
 ### 使用弱映射
 
@@ -489,6 +489,8 @@ alert(s1.size)
 ```
 
 `add()`向集合实例添加值，返回的还是集合实例
+
+`size`获取集合长度
 
 `has()`通过值查询集合是否有该值
 
@@ -571,4 +573,57 @@ ws.delete(val2) // true
 ```
 
 ### 弱值
+
+```js
+const ws = new WeakSet()
+ws.add({}) // 这个空对象没有其他引用，所以这行代码执行完后后，就会被回收
+```
+
+**`WeakSet`不可迭代**，所以没有`delete()`
+
+### 使用弱集合
+
+`WeakSet`可以给对象打标签时使用
+
+```js
+const disabledElements = new WeakSet()
+const loginButton = document.querySelector('#login')
+disabledElements.add(loginButton) // 当loginButton从DOM中删除时，disabledElements中的loginButton也会删除
+```
+
+## 迭代与扩展操作
+
+`Array、定型数组、Map、Set`定义了默认迭代器，可使用以下迭代
+
+```js
+let iteratorThings = [
+    Array.of(1,2),
+    typedArr = Int16Array.of(3,4),
+    new Map([5,6],[7,8])
+    new Set([9,10])
+]
+for(const iterableThing of iterableThings){
+    for(const x of iterableThing){
+        console.log(x)
+    }
+}
+// 1
+// 2
+// 3
+// 4
+// [5,6]
+// [7,8]
+// 9
+// 10
+```
+
+```js
+let arr1 = [1,2,3]
+let arr2 = [...arr1]
+console.log(arr1 === arr2) // false
+
+let map1 = new Map([1,2],[3,4])
+let map2 = new Map(map1)
+console.log(map2) // [[1,2],[3,4]]
+```
 
