修改对象解构

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -111,3 +111,74 @@ let descriptors = Object.getOwnPropertyDescriptors(book)
 
 对象结构就是用与对象匹配的结构来实现属性赋值
 
+```js
+let person = {
+	name: 'zzz',
+	age: 27
+}
+let {name,age} = person // 普通解构
+let {name: personName,age: personAge} = person // 重命名解构
+let {name, job} = person // 不完全解构
+let {name, job="software engineer"} = person // 解构默认值
+```
+
+#### 解构赋值嵌套
+
+```js
+let person = {
+	name: 'zzz',
+	age: 27,
+	job: {
+		title: 'software engineer'
+	}
+}
+let {job: {title}} = person
+console.log(title) // 'zzz'
+// 外层属性没有定义的情况下不能使用嵌套解构
+({foo: {bar: personCopy.bar}} = person) // TypeError 
+```
+
+#### 部分解构
+
+解构表达式开始的解构赋值成功后面的赋值错误，则整个解构赋值只会完成一部分
+
+```js
+let person = {
+	name: 'zzz',
+	age: 27
+}
+let personName,personAge,personJob;
+try{
+	({name: personName,foo: {age: personAge,bar: personJob}}) = person // 只会完成部分解构
+}
+```
+
+#### 参数上下文匹配
+
+对参数解构赋值不会影响`arguments`对象
+
+```js
+let person = {
+	name: 'zzz',
+	age： 27
+}
+
+function printPerson(foo,{name,age},bar){
+	console.log(arguments)
+	console.log(name,age)
+}
+
+function printPerson2(foo,{name: personName,age: personAge},bar){
+	console.log(arguments)
+	console.log(personName,personAge)
+}
+
+printPerson('1st',person,'2nd') 
+// ['1st',{name: 'zzz',age: 27},'2nd']
+// 'zzz', 27
+
+printPerson2('1st',person,'2nd')
+// ['1st',{name: 'zzz',age: 27},'2nd']
+// 'zzz', 27
+```
+
