新增工厂模式和构造函数模式

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -182,3 +182,75 @@ printPerson2('1st',person,'2nd')
 // 'zzz', 27
 ```
 
+## 创建对象
+
+### 工厂模式
+
+```js
+function createPerson(name,age,job){
+	let o = new Object;
+	o.name = name;
+	o.age = age;
+	o.job = job;
+	o.sayName = function(){
+		console.log(this.name)
+	}
+	return o
+}
+let person1 = createPerson('zzz',27,'software engineer')
+let person2 = createPerson('ll',27,'doctor')
+```
+
+这样调用几次函数就能创建几个具有相同属性的对象
+
+### 构造函数模式
+
+自定义构造函数可以确保实例被标识为特定类型
+
+```js
+function Person(name,age,job){
+	this.name = name;
+	this.age = age;
+	this.job = job;
+	this.sayName = function(){
+		console.log(this.name)
+	}
+}
+let person1 = new Person('zzz',27,'software engineer')
+let person2 = new Person('ll',27,'doctor')
+person1.sayName() // 'zzz'
+person2.sayName() // 'll'
+```
+
+构造函数和工厂模式的区别：
+
+- 没有显示创建对象
+- 属性和方法赋值给this
+- 没有return
+
+**new操作符调用构造函数会执行以下操作**
+
+- 在内存中创建一个新对象
+- 这个新对象内部的`[[prototype]]`特性被赋值为构造函数的`prototype`属性
+- 构造函数内部的this被赋值为这个对象
+- 执行构造函数内部的代码
+- 如果构造函数返回非空对象，则返回该对象，否则返回刚创建的对象
+
+构造函数的问题是**会在每个实例上把属性和方法都创建一遍，会造成重复**
+
+```js
+person1.sayName === person2.sayName // false
+// 解决方法：将公用方法抽取出来
+function Person(name,age,job){
+	this.name = name
+	this.age = age
+	this.job = job
+	this.sayName = sayName
+}
+function sayName(){
+	console.log(this.name)
+}
+```
+
+### 原型模式
+
