--- a/JavaScript/2.语言基础.md
+++ b/JavaScript/2.语言基础.md
@@ -250,7 +250,7 @@ Object 类型的公共方法:
 
 - `Constructor`:保存用户创建当前对象的函数
 - `hasOwnProperty("propertyName")`:检查给定属性是否在调用对象的实例上,不包括原型,属性名必须是字符串形式
-- `isPrototypeOf(object)`:检查传入的对象是否是调用对象的原型
+- `isPrototypeOf(object)`:检查调用对象是否是传入对象的原型
 - `propertyIsEnumerable("propertyName")`:用于检查给定属性是否能够用 for-in 来枚举
 - `toLocaleString()`:返回对象的字符串表示,字符串与执行环境的地区对应
 - `toString()`:返回对象的字符串表示
