--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -254,3 +254,34 @@ function sayName(){
 
 ### 原型模式
 
+每个函数都有`prototype`属性，包含实例共享的属性和方法。这个对象就是调用new操作符创建的对象的原型
+
+#### 理解原型
+
+只要创建一个函数，就会为这个函数创建一个`prototype`属性（指向原型对象）。并在原型对象中创建一个指回构造函数的`constructor`属性，创建的对象实例的`[[Prototype]]`指针会被赋值为构造函数的原型对象，`[[Prototype]]`即`__proto__`
+
+```js
+function Person(){}
+console.log(Person.prototype)//{constructor: ƒ Person(),__proto__: Object}
+console.log(Person.prototype.constructor === Person) // true
+console.log(Person.prototype.__proto__ === Object.prototype) // true
+console.log(Person.prototype.__proto__.constructor === Object) // true
+console.log(Person.prototype.__proto__) 
+// {
+//   constructor: f Object(),
+//   toString: ...
+//   hasOwnProperty: ...
+//   isPrototypeOf: ...
+//   ...
+// } 
+let person1 = new Person()
+let person2 = new Person()
+console.log(person1.__proto__ === Person.prototype) // true
+console.log(person1.__proto__ === person2.__proto__) // true
+```
+
+![原型](/Users/avalon/Documents/Note/imgs/原型.svg)
+
+`Object.getPrototypeOf(对象)`获取传入对象的原型对象，作用和`__proto__`一样
+
+`Object.setPrototypeOf(对象)`将对象的原型重新赋值，即重写继承关系，因为会影响所有使用了这个原型对象的代码，所以性能差
