新增in操作符

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -282,6 +282,33 @@ console.log(person1.__proto__ === person2.__proto__) // true
 
 ![原型](/Users/avalon/Documents/Note/imgs/原型.svg)
 
+![原型](C:\Users\Administrator\Desktop\Note\imgs\原型.svg)
+
 `Object.getPrototypeOf(对象)`获取传入对象的原型对象，作用和`__proto__`一样
 
 `Object.setPrototypeOf(对象)`将对象的原型重新赋值，即重写继承关系，因为会影响所有使用了这个原型对象的代码，所以性能差
+
+#### 原型层级
+
+访问对象属性时，先在对象上查找，没有则找原型对象，如果实例和原型对象上有同名属性，则取实例上的属性值
+
+#### `in`操作符
+
+`in`操作符会在可以通过对象访问指定属性时返回true，无论属性是在实例上还是原型上
+
+`for-in`操作符可以通过对象访问且可以被枚举的属性都会返回，包括实例和原型
+
+`Object.keys(对象)`获取对象上所有可枚举的实例属性
+
+`Object.getOwnPropertyNames()`获取所有实例属性，无论是否可枚举
+
+`Object.getOwnPropertySymbols()`获取所有实例Symbol属性
+
+#### 属性枚举顺序
+
+`Object.keys()`和`for-in`枚举顺序不确定
+
+`Object.getOwnPropertyNames()`、`Object.getOwnPropertySymbols()`和`Object.assign()`枚举顺序是确定的。先以升序枚举数值键，然后以插入顺序枚举字符串和符号键
+
+### 对象迭代
+
