--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -312,3 +312,58 @@ console.log(person1.__proto__ === person2.__proto__) // true
 
 ### 对象迭代
 
+静态方法`Object.values()`和`Object.entries()`返回内容的数组和键值对的数组，非字符串属性会转换为字符串输出，这两个方法执行的是浅复制，符号属性会被忽略
+
+#### 修改原型对象
+
+```js
+function Person(){}
+Person.prototype = {
+    name: 'zzz',
+    age: 27,
+    job: 'software engineer',
+    sayName(){
+        console.log(this.name)
+    }
+}
+```
+
+像上面那样修改原型对象后，`constructor`就不再指向Person了，而是指向Object了，可以重新设定`constructor`
+
+```js
+Person.prototype = {
+	constructor: Person，
+    name: 'zzz',
+    age: 27,
+    job: 'software engineer',
+    sayName(){
+        console.log(this.name)
+    }
+}
+// 上面那样指定了之后constructor的[[Enumerable]]就为true了，可修改为下面那样
+Person.prototype = {
+    name: 'zzz',
+    age: 27,
+    job: 'software engineer',
+    sayName(){
+        console.log(this.name)
+    }
+}
+Object.defineProperty(Person.prototype,'constructor',{
+    enumerable: false,
+    value: Person
+})
+```
+
+#### 原型的动态性
+
+从原型上搜索值的过程是动态的，即使实例在修改原型前已经存在，改动原型对象就会在实例上反映出来
+
+```js
+let friend = new Person()
+Person.prototype.sayHi = function(){
+    console.log('hi')
+}
+friend.sayHi() // 'hi'
+```
+
