新增原型的动态性和原生对象的原型

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -367,3 +367,41 @@ Person.prototype.sayHi = function(){
 friend.sayHi() // 'hi'
 ```
 
+实例的`[[prototype]]`指针是在调用构造函数时自动赋值的，即使原型重新赋值为新的对象，实例的`[[prototype]]`还是指向最初的原型，重写整个原型只是切断构造函数和原型之间的联系
+
+```js
+function Person(){}
+let friend = new Person()
+Person.prototype = {
+  constructor: Person,
+  name: 'zzz',
+  age: 27,
+  job: 'software engineer',
+  sayName(){
+    console.log(this.name)
+  }
+}
+friend.sayName() // 报错，实例的[[prototype]]指向的对象上没有sayName方法
+```
+
+![原型的动态性](/Users/avalon/Documents/Note/imgs/原型的动态性.png)
+
+***重写原型之后创建的实例才会引用新的实例***
+
+#### 原生对象的原型
+
+所有原生类型的构造函数都在原型上定义了实例方法，可通过`类型.prototype.xxx`来调用或者修改方法
+
+```js
+String.prototype.startsWith = function(text){
+	return this.indexOf(text) === 0
+}
+let msg = "Hello World"
+console.log(msg.startsWith("hello")) // true
+```
+
+#### 原型的问题
+
+- 弱化向构造函数传递初始化参数的能力，会导致所有实例默认都取得相同的属性值
+- 原型上所有属性在实例间时共享的
+
