修改原型的问题

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -403,5 +403,35 @@ console.log(msg.startsWith("hello")) // true
 #### 原型的问题
 
 - 弱化向构造函数传递初始化参数的能力，会导致所有实例默认都取得相同的属性值
-- 原型上所有属性在实例间时共享的
+- 原型上所有属性在实例间时共享的，值的话引用类型共享，基本类型为副本
+
+```js
+function Person(){}
+
+Person.prototype = {
+    constructor: Person,
+    name: 'Nicholas',
+    age: 29,
+    job: 'Software Engineer',
+    friends: ['Shelby', 'Court'],
+    sayName(){
+        console.log(this.name)
+    }
+}
+
+let Person1 = new Person()
+let Person2 = new Person()
+
+Person1.friends.push('Van')
+Person1.name = 'zcw'
+console.log(Person1.friends) // ['Shelby', 'Court', 'Van']
+console.log(Person2.friends) // ['Shelby', 'Court', 'Van']
+console.log(Person2.name) // Nicholas
+```
+
+## 继承
+
+继承分为两种：接口继承（只继承方法签名）和实现继承（继承实际的方法）
+
+ECMAScript没有签名，所以只有实现继承，通过原型链实现
 
