--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -403,7 +403,7 @@ console.log(msg.startsWith("hello")) // true
 #### 原型的问题
 
 - 弱化向构造函数传递初始化参数的能力，会导致所有实例默认都取得相同的属性值
-- 原型上所有属性在实例间时共享的，值的话引用类型共享，基本类型为副本
+- 原型上所有属性在实例间时共享的
 
 ```js
 function Person(){}
@@ -423,10 +423,10 @@ let Person1 = new Person()
 let Person2 = new Person()
 
 Person1.friends.push('Van')
-Person1.name = 'zcw'
+Person1.__proto__.name = 'zcw'
 console.log(Person1.friends) // ['Shelby', 'Court', 'Van']
 console.log(Person2.friends) // ['Shelby', 'Court', 'Van']
-console.log(Person2.name) // Nicholas
+console.log(Person2.name) // zcw
 ```
 
 ## 继承
@@ -434,4 +434,6 @@ console.log(Person2.name) // Nicholas
 继承分为两种：接口继承（只继承方法签名）和实现继承（继承实际的方法）
 
 ECMAScript没有签名，所以只有实现继承，通过原型链实现
+
+### 原型链
 
