修改函数参数默认值与作用域和面向对象原型链

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -433,9 +433,43 @@ console.log(Person2.name) // zcw
 
 继承分为两种：接口继承（只继承方法签名）和实现继承（继承实际的方法）
 
-ECMAScript没有签名，所以只有实现继承，通过原型链实现
+`ECMAScript`没有签名，所以只有实现继承，通过原型链实现
 
 ### 原型链
 
 每个构造函数都有一个原型对象，原型对象有一个constructor属性指回构造函数，实例内部有一个指针指向原型对象
+
+```js
+function SuperType(){
+  this.property = true
+}
+
+SuperType.prototype.getSuperValue = function(){
+  return this.property
+}
+
+function SubType(){
+  this.subProperty = false
+}
+
+SubType.prototype = new SuperType()
+
+SubType.prototype.getSubValue = function(){
+  return this.subProperty
+}
+
+let instance = new SubType()
+console.log(instance.property) // true
+```
+
+![](C:\Users\Administrator\Desktop\Note\imgs\原型链.png)
+
+#### 原型与继承关系
+
+原型和实例之间的关系可以通过`instanceof`和`isPrototypeOf()`来确定
+
+```js
+console.log(instance instanceof SuperType) // true
+console.log(SuperType.prototype.isPrototypeOf(instance)) // true
+```
 
