--- a/JavaScript/9.函数.md
+++ b/JavaScript/9.函数.md
@@ -157,7 +157,30 @@ console.log(makeKing('zcw',"XVI")) // King zcw XVI
 console.log(makeKing()) // King zzz II
 ```
 
+### 默认参数作用域和暂时性死区
 
+参数定义默认值和let顺序声明变量一样
+
+```js
+function makeKing(name="zcw",numerals="VIII"){
+	return `King ${name} ${numerals}`
+}
+// 等价于
+function makeKing(){
+	let name = "zcw"
+	let numerals = "VIII"
+	return `King ${name} ${numerals}`
+}
+// 参数默认值存在暂时性死区
+function makeKing(name="zcw",numerals=name){} // 正常运行
+function makeKing(name=numerals,numerals="VIII"){} // 调用时不传第一个参数会报错
+
+// 参数也存在于自己的作用域，不能引用函数体的作用域
+function makeKing(name="zcw",numerals=defaultNumeral){
+	// 调用时不传第二个参数会报错
+	let defaultNumeral = "VIII"
+}
+```
 
 ## 参数扩展与收集
 
