新增继承方式

--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -462,7 +462,7 @@ let instance = new SubType()
 console.log(instance.property) // true
 ```
 
-![](C:\Users\Administrator\Desktop\Note\imgs\原型链.png)
+![](C:\Users\Administrator\Desktop\Note\imgs\原型链.png)![原型链](/Users/avalon/Documents/Note/imgs/原型链.png)
 
 #### 原型与继承关系
 
@@ -473,3 +473,220 @@ console.log(instance instanceof SuperType) // true
 console.log(SuperType.prototype.isPrototypeOf(instance)) // true
 ```
 
+#### 关于方法
+
+子类有时候需要覆盖父类的方法或者扩展父类的方法，这些方法需要在原型赋值知乎再添加到原型上
+
+```js
+function SuperType(){
+    this.property = true
+}
+
+SuperType.prototype.getSuperValue = function(){
+    return this.property
+}
+
+function SubType(){
+    this.subproperty = false
+}
+
+// 继承SuperType
+SubType.prototype = new SuperType()
+
+// 新方法
+SubType.prototype.getSubType = function(){
+    return this.subproperty
+}
+
+// 覆盖已有方法
+SubType.prototype.getSuperValue = function(){
+    return false
+}
+
+let instance = new SubType()
+console.log(instance.getSuperValue()) // false
+```
+
+#### 原型链的问题
+
+原型链的问题在于原型中的引用值会在实例间共享
+
+```js
+function SuperType(){
+    this.colors = ['red','blue','green']
+}
+
+function SubType(){}
+
+SubType.prototype = new SuperType()
+
+let instance1 = new SubType()
+instance1.colors.push('black')
+console.log(instance1.colors) // [ 'red', 'blue', 'green', 'black' ]
+
+let instance2 = new SubType()
+console.log(instance2.colors) // [ 'red', 'blue', 'green', 'black' ]
+```
+
+`SuperType`的实例上有一个`colors`属性，子类`SubType`继承自父类，即子类的原型是父类的实例，所以`colors`属性在子类`SubType`的原型上，所以在多个子类实例上共享
+
+### 盗用构造函数
+
+为了解决原型链上引用值共享的问题，可用对象伪装：在子类构造函数中调用父类构造函数，再通过`call()或者apply()`以新创建的对象为上下文执行构造函数
+
+```js
+function SuperType(colors){
+    this.colors = colors
+}
+
+function SubType(colors){
+    SuperType.call(this,colors)
+}
+
+let instance1 = new SubType([ 'red', 'blue', 'green' ])
+instance1.colors.push('black')
+console.log(instance1.colors) // [ 'red', 'blue', 'green', 'black' ]
+
+let instance2 = new SubType([ 'red', 'blue', 'green' ])
+console.log(instance2.colors) // [ 'red', 'blue', 'green' ]
+```
+
+盗用构造函数的缺点就是构造函数模式的缺点，必须在构造函数中定义方法，所以函数不能重用，子类也不能访问父类原型上定义的方法
+
+### 组合继承
+
+基本思路是使用原型链继承原型上的属性和方法，通过盗用构造函数继承实例属性。这样既可以把方法定义在原型上重用，又可以让每个实例都有自己的属性
+
+```js
+function SuperType(name){
+    this.name = name;
+    this.colors = ['red','blue','green']
+}
+
+SuperType.prototype.sayName = function(){
+    console.log(this.name)
+}
+
+function SubType(name,age){
+    SuperType.call(this,name)
+    this.age = age
+}
+
+// 继承方法
+SubType.prototype = new SuperType()
+
+SubType.prototype.sayAge = function(){
+    console.log(this.age)
+}
+
+let instance1 = new SubType('zzz',27)
+instance1.colors.push('black')  
+console.log(instance1.colors) // [ 'red', 'blue', 'green', 'black' ]
+instance1.sayName() // zzz
+instance1.sayAge() // 27
+
+let instance2 = new SubType('zcw',26)
+console.log(instance2.colors) // ['red', 'blue', 'green']
+instance2.sayName() // zcw 
+instance2.sayAge() // 26
+```
+
+### 原型式继承
+
+原型式继承原理：`object`函数创建一个临时的构造函数，传入的对象赋值给这个构造函数的原型，并返回构造函数的一个实例，`object`函数是对传入对象执行了一次浅复制
+
+```js
+function object(o){
+    function F(){}
+    F.prototype = o
+    return new F()
+}
+
+let person = {
+    name: 'zzz',
+    friends: ['jmc','lj','ht']
+}
+
+let anotherPerson = object(person)
+anotherPerson.name = 'zcw'
+anotherPerson.friends.push('ll')
+
+let yetAnotherPerson = object(person)
+yetAnotherPerson.name = 'zhangchenwei'
+yetAnotherPerson.friends.push('jm')
+
+console.log(person.friends) // [ 'jmc', 'lj', 'ht', 'll', 'jm' ]
+```
+
+适用场景：不关注构造函数，但仍然需要在对象间共享信息的场合
+
+`Object.create(作为新对象的原型对象，给新对象定义额外属性的描述符对象)`将原型式继承概念化了,描述符对象上的属性会遮蔽原型对象上的同名属性
+
+```js
+let another = Object.create(person,{
+    job:{
+        value: 'software engineer'
+    }
+})
+console.log(another.job) // software engineer
+```
+
+### 寄生式继承
+
+寄生式继承类似于工厂模式，原理：创建一个实现继承的函数，以某种方式增强对象，然后返回这个对象
+
+```js
+function createAnother(original){
+    let clone = object(original) // object是任何返回新对象的方法
+    clone.sayHi = function(){
+        console.log("hi")
+    }
+    return clone
+}
+
+let person = {
+    name: 'zcw',
+    friends: ['jmc','lj','ht']
+}
+
+let anotherPerson = createAnother(person)
+anotherPerson.sayHi() // hi
+```
+
+使用场景：不关注构造函数的场景
+
+### 寄生式组合继承
+
+组合继承存在效率问题，因为父类构造函数被调用两次：一次在创建子类时调用，另一次在子类构造函数中调用。最好的写法时子类构造函数
+
+基本思路：通过盗用构造函数继承属性，使用原型链继承方法。不通过调用父类构造函数给子类原型赋值，而是取得父类原型的一个副本，然后将副本赋值给子类原型
+
+```js
+function inheritPrototype(subType,superType){
+    let prototype = object(superType.prototype); // 创建对象
+    prototype.constructor = subType
+    subType.prototype = prototype
+}
+
+function SuperType(name,age){
+    this.name = name
+    this.age = age
+}
+
+SuperType.prototype.sayName = function(){
+    console.log(this.name)
+}
+
+function SubType(name,age){
+    SuperType.call(this,name)
+    this.age = age
+}
+
+inheritPrototype(SubType,SuperType)
+
+SubType.prototype.sayAge = function(){
+    console.log(this.age)
+}
+```
+
+寄生式组合继承时引用类型继承的最佳实践
