--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -475,7 +475,7 @@ console.log(SuperType.prototype.isPrototypeOf(instance)) // true
 
 #### 关于方法
 
-子类有时候需要覆盖父类的方法或者扩展父类的方法，这些方法需要在原型赋值知乎再添加到原型上
+子类有时候需要覆盖父类的方法或者扩展父类的方法，这些方法需要在原型赋值之后再添加到原型上
 
 ```js
 function SuperType(){
